--- a/rest/dashboard/.htaccess
+++ b/rest/dashboard/.htaccess
@@ -3,11 +3,11 @@ RewriteEngine On
  
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-s
-RewriteRule ^(.*)$ RestApi.php?x=$1 [QSA,NC,L]
+RewriteRule ^(.*)$ DashboardController.php?x=$1 [QSA,NC,L]
  
 RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^(.*)$ RestApi.php [QSA,NC,L]
+RewriteRule ^(.*)$ DashboardController.php [QSA,NC,L]
  
 RewriteCond %{REQUEST_FILENAME} -s
-RewriteRule ^(.*)$ RestApi.php [QSA,NC,L]
+RewriteRule ^(.*)$ DashboardController.php [QSA,NC,L]
 </IfModule>
